# SpargelEngine

./: .bazelrc  .clang-format  .gitignore  .gitmodules  BUILD.gn  Cargo.toml  MODULE.bazel
crates/app_kit/: Cargo.toml
crates/core_foundation/: Cargo.toml
crates/core_foundation/src/: ffi.rs  main.rs
crates/ffi_utils/: Cargo.toml
crates/ffi_utils/src/: lib.rs
crates/objc/: Cargo.toml
crates/objc/src/: ffi.rs  lib.rs  macros.rs  main.rs  runtime.rs  string.rs
crates/objc/src/runtime/: any_class.rs
gn/config/: BUILD.gn  BUILDCONFIG.gn  local.gni  vulkan.gni
prototypes/: BUILD.bazel  audio.mm  list_fonts.swift  spi.cpp
source/: BUILD.gn  proto_mac.cpp
source/spargel/: BUILD.gn
source/spargel/base/: BUILD.gn  bit_cast.h  command_line.h  console.h  either_test.cpp  format.h  format_tests.cpp  hash.h  hash_map.h  hash_test.cpp  inline_array.h  optional_test.cpp  panic.cpp  ref_ptr_tests.cpp  source_location.h  span.h  string.h  sum_type_test.cpp  tag_invoke_demo.cpp  tagged_union_test.cpp  test.h  types.h  vector.h  vector_test.cpp
source/spargel/cocoa/: BUILD.gn  display_modes.cpp  display_modes.h
source/spargel/codec/: BUILD.gn  CMakeLists.txt  json_codec.cpp  json_codec.h  test_codec.cpp  test_json_codec.cpp
source/spargel/codec/model/: gltf.cpp  gltf.h
source/spargel/core/: BUILD.gn  README.md  add_pointer.h  core.h  is_same.h  remove_cvref.h
source/spargel/coro/: BUILD.gn  coroutine.h  generator.h  task.cpp  task.h
source/spargel/deflate/: BUILD.gn  deflate.cpp  deflate.h  deflate_demo.cpp
source/spargel/entry/: component_demo.cpp  launcher_mac.cpp  simple_android.cpp  simple_demo.cpp
source/spargel/gltf/: BUILD.gn  gltf.cpp  gltf.h  summary_gltf.cpp
source/spargel/gpu/: BUILD.gn  demo_gpu.cpp  gpu.cpp  gpu.h  gpu_metal.h  gpu_metal.mm  gpu_vulkan.cpp  gpu_vulkan.h  metal_context.mm
source/spargel/input/: BUILD.gn
source/spargel/intrinsic/: BUILD.gn  memory.h
source/spargel/json/: BUILD.gn  dump_json.cpp  json_parser.cpp  json_parser.h  json_tests.cpp  json_value.h
source/spargel/lang/: BUILD.gn  ast.h  lexer.cpp  main.cpp  parser.cpp  parser.h  syntax_kind.inc  syntax_node.cpp  syntax_node.h
source/spargel/logging/: BUILD.gn  log_demo.cpp  logging.cpp  logging.h
source/spargel/math/: BUILD.gn  rectangle.h  shape.h  vector.h
source/spargel/png/: BUILD.gn  png_decoder.h  png_info.cpp
source/spargel/render/: BUILD.gn  demo_gltf_opengl.cpp  demo_metal.mm  demo_opengl.cpp  ui_renderer.cpp  ui_renderer.h  ui_renderer_metal.mm  ui_scene.h
source/spargel/resource/: BUILD.gn  demo_resource.cpp  demo_resource_overlay.cpp  directory.cpp  directory.h  overlay.h  resource.cpp
source/spargel/task/: BUILD.gn  demo_task.cpp  task.cpp  task.h
source/spargel/text/: BUILD.gn  demo_ft_hb_console.cpp  font.cpp  font.h  font_mac.cpp  font_manager_mac.cpp  font_manager_mac.h  styled_text.h  text_shaper.h  text_shaper_mac.cpp
source/spargel/ui/: BUILD.gn  demo_ui.cpp  im.h  platform_win32.cpp  ui_android.h  ui_xcb.cpp  view.h  window_demo.cpp  window_demo2.cpp  window_mac.mm  xkb_util.cpp
source/spargel/util/: path.cpp  path.h
spargel/: BUILD.gn  init.cpp  init.h
spargel/apple/: BUILD.gn  bridge_cast.h  retain_ptr.h
spargel/base/: BUILD.gn  argparse.h  envvar.cpp  envvar.h  hash_map.h  logging.cpp  string.h  terminal.h  terminal_posix.cpp  vector.h
spargel/editor/: BUILD.bazel  BUILD.gn  main.cpp
spargel/gpu/: BUILD.gn  context_metal.h  context_metal.mm  device.cpp  device.h  device_mtl.h  device_mtl.mm
spargel/runtime/: BUILD.bazel  BUILD.gn  check.h  init.cpp  init.h  logging.cpp  logging.h  painter.cpp  painter.h  vecmath.h  window.cpp  window.h  window_appkit.mm
spargel/runtime/apple/: BUILD.bazel  bridge_cast.h  retain_ptr.h  retain_ptr_tests.cpp
spargel/runtime/base/: BUILD.bazel  check.h  logging.cpp  logging.h
spargel/runtime/gpu/: BUILD.bazel  BUILD.gn  context.h  context_metal.h  context_metal.mm  shelf_alloc.h
spargel/runtime/macos/: BUILD.bazel  painter_metal.mm  window_appkit.mm
spargel/runtime/math/: BUILD.bazel  BUILD.gn  vecmath.h
spargel/runtime/text/: BUILD.bazel  README.md  font.cpp  font.h  font_mac.cpp  font_mac.h  font_manager.cpp  font_manager.h  font_manager_mac.cpp  font_manager_mac.h  font_manager_mac.mm  font_props.h  shaping.h  shaping_mac.cpp
spargel/runtime/ui/: BUILD.bazel  backend_mac.h  backend_mac.mm  backend_macos.h  backend_macos.mm  commands.cpp  commands.h  context.cpp  context.h  packer.cpp  packer.h  painter.cpp  painter.h  painter_metal.mm  window.h  window_appkit.h  window_appkit.mm
spargel/runtime/ui/not_used/: painter.h  painter_metal.mm
spargel/spsl/: BUILD.gn  spsl.cpp  spsl.h  spslc.cpp  sum.spsl
spargel/text/: BUILD.gn  font.cpp  font.h  font_mac.cpp  font_mac.h  font_manager.cpp  font_manager.h  font_manager_mac.cpp  font_manager_mac.h  shaping.h  shaping_mac.cpp
spargel/ui/: BUILD.gn  README.md  backend_mac.h  backend_mac.mm  canvas.h  commands.cpp  commands.h  context.cpp  context.h  packer.cpp  painter.cpp  painter.h  view.cpp  view.h  window.h  window_mac.h  window_mac.mm
