import("//gn/autoconfig.gni")

autoconfig("autoconfig_h") {
    header = "autoconfig.h"

    flags = [
        "SPARGEL_IS_ANDROID=0",
        "SPARGEL_IS_EMSCRIPTEN=0",
        "SPARGEL_IS_LINUX=$is_linux",
        "SPARGEL_IS_MACOS=$is_macos",
        "SPARGEL_IS_WINDOWS=$is_windows",

        "SPARGEL_ENABLE_ASSERT=1",
        "SPARGEL_ENABLE_LOG_ANSI_COLOR=1",
        "SPARGEL_USE_FILE_MMAP=1",
        "SPARGEL_ENABLE_TRACING=0",

        "SPARGEL_ENABLE_OPENGL=0",
    ]
}

source_set("config") {
    deps = [ ":autoconfig_h" ]
}

source_set("spargel") {
    deps = [
        "//source/spargel/base",
        "//source/spargel/cocoa",
        "//source/spargel/codec",
        "//source/spargel/deflate",
        # TODO: Rewrite ECS.
        # "//source/spargel/ecs",
        "//source/spargel/gltf",
        "//source/spargel/gpu",
        "//source/spargel/input",
        "//source/spargel/intrinsic",
        "//source/spargel/json",
        "//source/spargel/lang",
        "//source/spargel/logging",
        "//source/spargel/math",
        "//source/spargel/png",
        "//source/spargel/render",
        "//source/spargel/resource",
        "//source/spargel/task",
        "//source/spargel/text",
        "//source/spargel/ui",
        "//source/spargel/util",
    ]
}
