load("@rules_cc//cc:defs.bzl", "cc_binary")

package_group(
    name = "packages",
    packages = ["//spargel/runtime/..."],
)

filegroup(
    name = "public_hdrs",
    srcs = [
        "logging.h",
        "painter.h",
        "vecmath.h",
        "window.h",
    ],
    visibility = [":packages"],
)

cc_library(
    name = "runtime",
    hdrs = [":public_hdrs"],
    srcs = [
        "logging.cpp",
        "painter.cpp",
    ],
    deps = select({
        "@platforms//os:macos": ["//spargel/runtime/macos:runtime_macos"],
    }),
    visibility = ["//visibility:public"],
)
