load("@rules_cc//cc:defs.bzl", "cc_binary")

package_group(
    name = "packages",
    packages = ["//spargel/runtime/..."],
)

filegroup(
    name = "public_hdrs",
    srcs = [
        "check.h",
        "init.h",
        "logging.h",
    ],
    visibility = [":packages"],
)

cc_library(
    name = "runtime",
    hdrs = [":public_hdrs"],
    srcs = [
        "init.cpp",
        "logging.cpp",
    ],
    deps = [
        "//spargel/runtime/gpu",
        "//spargel/runtime/ui",
    ],
    visibility = ["//visibility:public"],
)
