load("@rules_cc//cc:defs.bzl", "cc_binary")

package_group(
    name = "packages",
    packages = ["//spargel/runtime/..."],
)

filegroup(
    name = "public_hdrs",
    srcs = [
        "init.h",
    ],
    visibility = [":packages"],
)

cc_library(
    name = "runtime",
    hdrs = [":public_hdrs"],
    srcs = [
        "init.cpp",
    ],
    deps = [
        "//spargel/runtime/base",
        "//spargel/runtime/gpu",
        "//spargel/runtime/text",
        "//spargel/runtime/ui",
    ],
    visibility = ["//visibility:public"],
)
