source_set("ui") {
    public = [
    ]
    sources = [
        #"backend_mac.h",
        #"backend_mac.mm",
        #"commands.cpp",
        #"context.cpp",
        #"packer.h",
        #"packer.cpp",
        #"painter.cpp",
        "view.cpp",
        "window_mac.mm",
    ]
    frameworks = [
        "AppKit.framework",
        "MetalKit.framework",
        "QuartzCore.framework",
    ]
}
