source_set("lang") {
    public = [
        "parser.h",
    ]
    sources = [
        "lexer.cpp",
        "parser.cpp",
        "syntax_kind.cpp",
        "syntax_node.cpp",
        "syntax_token.cpp",
        "token_kind.cpp",
    ]
    deps = [
        "//source/spargel/base",
    ]
}

executable("driver") {
    sources = [
        "main.cpp",
    ]
    deps = [
        ":lang",
        "//source/spargel/base",
    ]
}
