load("@rules_cc//cc:defs.bzl", "cc_library", "objc_library")

filegroup(
    name = "public_hdrs",
    srcs = [
        "context.h",
    ],
)

cc_library(
    name = "gpu",
    hdrs = [":public_hdrs"],
    srcs = [],
    deps = select({
        "@platforms//os:macos": [":gpu_metal"],
    }),
    visibility = ["//spargel/runtime:packages"],
)

objc_library(
    name = "gpu_metal",
    srcs = [
        "context_metal.h",
        "context_metal.mm",
        ":public_hdrs",
        "//spargel/runtime:public_hdrs",
    ],
    deps = [
        "//spargel/runtime/base",
    ],
    sdk_frameworks = [
        "Metal",
    ],
    visibility = ["//spargel/runtime/ui:__subpackages__"],
)
