load("@rules_cc//cc:defs.bzl", "objc_library")

package(default_visibility = ["//spargel/runtime:packages"])

objc_library(
    name = "runtime_macos",
    srcs = [
        "window_appkit.mm",
        "painter_metal.mm",
        "//spargel/runtime:public_hdrs",
    ],
    sdk_frameworks = [
        "AppKit",
        "Metal",
    ],
)
