load("@rules_cc//cc:defs.bzl", "cc_library", "objc_library")

filegroup(
    name = "public_hdrs",
    srcs = [
        "commands.h",
        "context.h",
        "painter.h",
    ],
)

cc_library(
    name = "ui",
    hdrs = [":public_hdrs"],
    srcs = [
        "commands.cpp",
        "context.cpp",
        "//spargel/runtime:public_hdrs",
    ],
    deps = [
        "//spargel/runtime/math",
    ] + select({
        "@platforms//os:macos": [":ui_macos"],
    }),
    visibility = ["//spargel/runtime:packages"],
)

objc_library(
    name = "ui_macos",
    srcs = [
        "backend_mac.h",
        "backend_mac.mm",
        ":public_hdrs",
        "//spargel/runtime:public_hdrs",
    ],
    deps = [
        "//spargel/runtime/math",
        "//spargel/runtime/gpu:gpu_metal",
    ],
    sdk_frameworks = [
        "AppKit",
        "Metal",
        "MetalKit",
    ],
)
